--- a/resources/views/css/jardin-css.css
+++ b/resources/views/css/jardin-css.css
@@ -4,15 +4,19 @@
 }
 
 body {
-    background-color: #3c3c3c;
-    background-image: url('https://images.rawpixel.com/image_1000/czNmcy1wcml2YXRlL3Jhd3BpeGVsX2ltYWdlcy93ZWJzaXRlX2NvbnRlbnQvbHIvcGQxOS1taW50eS0wMi1sZWFmXzEuanBn.jpg');
-    height: 100vh;
+    background-color: black !important
 }
 
 .flex {
     -webkit-box-flex: 1;
     -ms-flex: 1 1 auto;
     flex: 1 1 auto
+}
+
+.modal-content{
+    background-color: #3c3c3c !important;
+    color:#fff;
+
 }
 
 @media (max-width:991.98px) {
@@ -40,7 +44,7 @@ body {
     border: none;
     margin-bottom: 30px;
 
-    
+
 }
 
 .bd-example-row [class^="col"], .bd-example-cssgrid .grid>* {
@@ -53,14 +57,14 @@ body {
 .btn-primary {
     color: #fff;
     background-color: #6c757d !important;
-    border-color: #6c757d !important; 
+    border-color: #6c757d !important;
 }
 
 hr {
     border: 0;
     clear:both;
     display:block;
-    width: 96%;               
+    width: 96%;
     background-color:#ffffff;
     height: 1px;
   }
@@ -110,13 +114,7 @@ font-style: normal;
 a {
 text-decoration: none;
 color: inherit;
-} 
-
-#sm-card{
-    margin-top: 0;
-    margin-bottom: 0;
 }
-
 
 /* Layout */
 /* .s-layout {
@@ -246,3 +244,90 @@ background-color: #192b3c;
 height: 64px;
 width: 100%;
 } */
+
+.emptyDescription{
+background-color: #343a40!important;
+color:#fff;
+display: flex;
+flex-direction: column;
+align-items: center;
+justify-content: center;
+}
+
+.textoGrande {
+    font-size: 2vw;
+
+}
+
+.textoMuyGrande {
+    font-size: 2vw;
+
+}
+
+
+a:link, a:visited, a:hover, a:active {
+    color: white!important;
+  }
+
+.popup {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    z-index: 999;
+    display: none;
+  }
+
+  /* Style the popup content */
+.popup-content {
+    z-index: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background: #fff;
+    padding: 20px;
+    width: 300px;
+  }
+
+  /* Style the close button */
+.close-button {
+    float: right;
+    cursor: pointer;
+  }
+
+  #lightbox, #lightboxPlanta {
+    position: fixed;
+    border-radius: 1rem;
+    top: 50%;
+    left: 50%;
+    background-color: #343a40!important;
+    color:white;
+    transform: translate(-50%, -50%);
+    padding: 20px;
+    z-index: 1;
+  }
+
+  .lightboxPlanta_close {
+    float:right;
+    font-size: 24px;
+    font-weight: bold;
+    line-height: 1;
+    color: #333;
+    filter: alpha(opacity=20);
+    opacity: .2;
+  }
+
+  #lightboxRenombre {
+    position: fixed;
+    border-radius: 1rem;
+    top: 50%;
+    left: 50%;
+    background-color: #343a40!important;
+    color:white;
+    transform: translate(-50%, -50%);
+    padding: 20px;
+    z-index: 2;
+  }
